Dropdownify base navbar

--- a/teammanager/static/teammanager/css/bootstrap.css
+++ b/teammanager/static/teammanager/css/bootstrap.css
@@ -13,7 +13,8 @@
     --orange: #ee4c23;
     --yellow: #ffc107;
     --green: #50b04d;
-    --green-dark: #07612d;
+    --green-light: #b8dfb7;
+    --green-dark: #20461e;
     --teal: #20c997;
     --cyan: #17a2b8;
     --white: #fff;
@@ -1809,7 +1810,6 @@ pre code {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
-
     .table-responsive-sm > .table-bordered {
         border: 0;
     }
@@ -1822,7 +1822,6 @@ pre code {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
-
     .table-responsive-md > .table-bordered {
         border: 0;
     }
@@ -1835,7 +1834,6 @@ pre code {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
-
     .table-responsive-lg > .table-bordered {
         border: 0;
     }
@@ -1848,7 +1846,6 @@ pre code {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
-
     .table-responsive-xl > .table-bordered {
         border: 0;
     }
@@ -2304,7 +2301,6 @@ textarea.form-control {
         justify-content: center;
         margin-bottom: 0;
     }
-
     .form-inline .form-group {
         display: flex;
         flex: 0 0 auto;
@@ -2312,22 +2308,18 @@ textarea.form-control {
         align-items: center;
         margin-bottom: 0;
     }
-
     .form-inline .form-control {
         display: inline-block;
         width: auto;
         vertical-align: middle;
     }
-
     .form-inline .form-control-plaintext {
         display: inline-block;
     }
-
     .form-inline .input-group,
     .form-inline .custom-select {
         width: auto;
     }
-
     .form-inline .form-check {
         display: flex;
         align-items: center;
@@ -2335,7 +2327,6 @@ textarea.form-control {
         width: auto;
         padding-left: 0;
     }
-
     .form-inline .form-check-input {
         position: relative;
         flex-shrink: 0;
@@ -2343,12 +2334,10 @@ textarea.form-control {
         margin-right: 0.25rem;
         margin-left: 0;
     }
-
     .form-inline .custom-control {
         align-items: center;
         justify-content: center;
     }
-
     .form-inline .custom-control-label {
         margin-bottom: 0;
     }
@@ -3044,7 +3033,7 @@ input[type="button"].btn-block {
     color: #212529;
     text-align: left;
     list-style: none;
-    background-color: #fff;
+    background-color: #b8dfb7;
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 0.25rem;
@@ -3222,7 +3211,7 @@ input[type="button"].btn-block {
 .dropdown-item:hover, .dropdown-item:focus {
     color: #16181b;
     text-decoration: none;
-    background-color: #f8f9fa;
+    background-color: #dbefda;
 }
 
 .dropdown-item.active, .dropdown-item:active {
@@ -4189,7 +4178,6 @@ input[type="button"].btn-block {
         flex-flow: row nowrap;
         justify-content: flex-start;
     }
-
     .navbar-expand-sm .navbar-nav {
         flex-direction: row;
     }
@@ -4202,17 +4190,14 @@ input[type="button"].btn-block {
         padding-right: 0.5rem;
         padding-left: 0.5rem;
     }
-
     .navbar-expand-sm > .container,
     .navbar-expand-sm > .container-fluid {
         flex-wrap: nowrap;
     }
-
     .navbar-expand-sm .navbar-collapse {
         display: flex !important;
         flex-basis: auto;
     }
-
     .navbar-expand-sm .navbar-toggler {
         display: none;
     }
@@ -4231,7 +4216,6 @@ input[type="button"].btn-block {
         flex-flow: row nowrap;
         justify-content: flex-start;
     }
-
     .navbar-expand-md .navbar-nav {
         flex-direction: row;
     }
@@ -4244,17 +4228,14 @@ input[type="button"].btn-block {
         padding-right: 0.5rem;
         padding-left: 0.5rem;
     }
-
     .navbar-expand-md > .container,
     .navbar-expand-md > .container-fluid {
         flex-wrap: nowrap;
     }
-
     .navbar-expand-md .navbar-collapse {
         display: flex !important;
         flex-basis: auto;
     }
-
     .navbar-expand-md .navbar-toggler {
         display: none;
     }
@@ -4273,7 +4254,6 @@ input[type="button"].btn-block {
         flex-flow: row nowrap;
         justify-content: flex-start;
     }
-
     .navbar-expand-lg .navbar-nav {
         flex-direction: row;
     }
@@ -4286,17 +4266,14 @@ input[type="button"].btn-block {
         padding-right: 0.5rem;
         padding-left: 0.5rem;
     }
-
     .navbar-expand-lg > .container,
     .navbar-expand-lg > .container-fluid {
         flex-wrap: nowrap;
     }
-
     .navbar-expand-lg .navbar-collapse {
         display: flex !important;
         flex-basis: auto;
     }
-
     .navbar-expand-lg .navbar-toggler {
         display: none;
     }
@@ -4315,7 +4292,6 @@ input[type="button"].btn-block {
         flex-flow: row nowrap;
         justify-content: flex-start;
     }
-
     .navbar-expand-xl .navbar-nav {
         flex-direction: row;
     }
@@ -4328,17 +4304,14 @@ input[type="button"].btn-block {
         padding-right: 0.5rem;
         padding-left: 0.5rem;
     }
-
     .navbar-expand-xl > .container,
     .navbar-expand-xl > .container-fluid {
         flex-wrap: nowrap;
     }
-
     .navbar-expand-xl .navbar-collapse {
         display: flex !important;
         flex-basis: auto;
     }
-
     .navbar-expand-xl .navbar-toggler {
         display: none;
     }
@@ -4686,7 +4659,6 @@ input[type="button"].btn-block {
         orphans: 1;
         widows: 1;
     }
-
     .card-columns .card {
         display: inline-block;
         width: 100%;
@@ -5304,7 +5276,6 @@ a.badge-dark:focus, a.badge-dark.focus {
     .list-group-horizontal-sm {
         flex-direction: row;
     }
-
     .list-group-horizontal-sm .list-group-item {
         margin-right: -1px;
         margin-bottom: 0;
@@ -5328,7 +5299,6 @@ a.badge-dark:focus, a.badge-dark.focus {
     .list-group-horizontal-md {
         flex-direction: row;
     }
-
     .list-group-horizontal-md .list-group-item {
         margin-right: -1px;
         margin-bottom: 0;
@@ -5352,7 +5322,6 @@ a.badge-dark:focus, a.badge-dark.focus {
     .list-group-horizontal-lg {
         flex-direction: row;
     }
-
     .list-group-horizontal-lg .list-group-item {
         margin-right: -1px;
         margin-bottom: 0;
@@ -5376,7 +5345,6 @@ a.badge-dark:focus, a.badge-dark.focus {
     .list-group-horizontal-xl {
         flex-direction: row;
     }
-
     .list-group-horizontal-xl .list-group-item {
         margin-right: -1px;
         margin-bottom: 0;
@@ -5797,7 +5765,6 @@ a.close.disabled {
     .modal-dialog-scrollable {
         max-height: calc(100% - 3.5rem);
     }
-
     .modal-dialog-scrollable .modal-content {
         max-height: calc(100vh - 3.5rem);
     }
@@ -5805,7 +5772,6 @@ a.close.disabled {
     .modal-dialog-centered {
         min-height: calc(100% - 3.5rem);
     }
-
     .modal-dialog-centered::before {
         height: calc(100vh - 3.5rem);
     }
@@ -10240,7 +10206,6 @@ a.text-dark:hover, a.text-dark:focus {
     .table {
         border-collapse: collapse !important;
     }
-
     .table td,
     .table th {
         background-color: #fff !important;
@@ -10254,7 +10219,6 @@ a.text-dark:hover, a.text-dark:focus {
     .table-dark {
         color: inherit;
     }
-
     .table-dark th,
     .table-dark td,
     .table-dark thead th,
