--- a/teammanager/bootstrap/scss/_variables.scss
+++ b/teammanager/bootstrap/scss/_variables.scss
@@ -42,7 +42,8 @@ $red: #dc3545 !default;
 $orange: #ee4c23 !default;
 $yellow: #ffc107 !default;
 $green: #50b04d !default;
-$darkgreen: #07612d !default;
+$lightgreen: lighten($green, 30%) !default;
+$darkgreen: darken($green, 30%) !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
 
@@ -58,6 +59,7 @@ $colors: map-merge(
                         "orange": $orange,
                         "yellow": $yellow,
                         "green": $green,
+                        "green-light": $lightgreen,
                         "green-dark": $darkgreen,
                         "teal": $teal,
                         "cyan": $cyan,
@@ -755,7 +757,7 @@ $dropdown-padding-y: .5rem !default;
 $dropdown-spacer: .125rem !default;
 $dropdown-font-size: $font-size-base !default;
 $dropdown-color: $body-color !default;
-$dropdown-bg: $white !default;
+$dropdown-bg: $lightgreen !default;
 $dropdown-border-color: rgba($black, .15) !default;
 $dropdown-border-radius: $border-radius !default;
 $dropdown-border-width: $border-width !default;
@@ -766,7 +768,7 @@ $dropdown-box-shadow: 0 .5rem 1rem rgba($black, .175) !default;
 
 $dropdown-link-color: $gray-900 !default;
 $dropdown-link-hover-color: darken($gray-900, 5%) !default;
-$dropdown-link-hover-bg: $gray-100 !default;
+$dropdown-link-hover-bg: lighten($lightgreen, 10%) !default;
 
 $dropdown-link-active-color: $component-active-color !default;
 $dropdown-link-active-bg: $component-active-bg !default;
