Change meeting edit link visibility to staff only.

--- a/teammanager/templates/teammanager/meeting.html
+++ b/teammanager/templates/teammanager/meeting.html
@@ -36,7 +36,7 @@
             attended)
           {% endif %}
           </i></span>
-          {% if request.user.is_authenticated %}
+          {% if request.user.is_staff %}
             <a class="btn btn-secondary text-white ml-3" href="{% url 'admin:teammanager_meeting_change' meeting.id %}">Edit</a>
           {% endif %}
         </h3>
