Add abstraction for calendar

--- a/teammanager/templates/teammanager/outreach_from_calendar.html
+++ b/teammanager/templates/teammanager/outreach_from_calendar.html
@@ -20,7 +20,7 @@
           <td>{{ event.date_str }}</td>
           <td>{{ event.time_start_str }}</td>
           <td>{{ event.time_end_str }}</td>
-          <td><a class="btn btn-primary" href="#">Create</a></td>
+          <td><a class="btn btn-primary" href="#{{ event.uid }}">Create</a></td>
         </tr>
       {% endfor %}
       </tbody>
