--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -64,7 +64,7 @@
               {% if meeting.type == "out" %}
                 <a href="{% url "teammanager:meeting" id=meeting.id %}"
                    class="list-group-item list-group-item-action">{{ meeting }}
-                  <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} attended</span>
+                  <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} att.</span>
                 </a>
               {% endif %}
             {% endfor %}
