--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -13,7 +13,7 @@
             {% if meeting.type == "build" %}
               <a href="{% url "teammanager:meeting" id=meeting.id %}"
                  class="list-group-item list-group-item-action">{{ meeting }}
-                <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} attended</span>
+                <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} att.</span>
               </a>
             {% endif %}
           {% endfor %}
@@ -25,7 +25,7 @@
             {% if meeting.type == "othr" %}
               <a href="{% url "teammanager:meeting" id=meeting.id %}"
                  class="list-group-item list-group-item-action">{{ meeting }}
-                <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} attended</span>
+                <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} att.</span>
               </a>
             {% endif %}
           {% endfor %}
