--- a/teammanager/templates/teammanager/outreach_from_calendar.html
+++ b/teammanager/templates/teammanager/outreach_from_calendar.html
@@ -6,11 +6,11 @@
     <table class="table table-striped table-hover">
       <thead>
       <tr>
-        <td>Name</td>
-        <td>Date</td>
-        <td>Start</td>
-        <td>End</td>
-        <td>Action</td>
+        <th>Name</th>
+        <th>Date</th>
+        <th>Start</th>
+        <th>End</th>
+        <th>Action</th>
       </tr>
       </thead>
       <tbody>
