--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -13,7 +13,7 @@
             {% if meeting.type == "build" %}
               <a href="{% url "teammanager:meeting" id=meeting.id %}"
                  class="list-group-item list-group-item-action">{{ meeting }}
-                <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} att.</span>
+                <span class="ml-1 badge badge-primary float-right">{{ meeting.members.all|length }} att.</span>
               </a>
             {% endif %}
           {% endfor %}
@@ -25,7 +25,7 @@
             {% if meeting.type == "othr" %}
               <a href="{% url "teammanager:meeting" id=meeting.id %}"
                  class="list-group-item list-group-item-action">{{ meeting }}
-                <span class="ml-1 badge badge-primary">{{ meeting.members.all|length }} att.</span>
+                <span class="ml-1 badge badge-primary float-right">{{ meeting.members.all|length }} att.</span>
               </a>
             {% endif %}
           {% endfor %}
@@ -45,7 +45,9 @@
                 <p>
                   This is a description of an outreach. It's very descriptive. It describes the outreach well.
                 </p>
+                {% if meeting.members.all|length > 0 %}
                 <a href="{% url "teammanager:meeting" id=meeting.id %}" class="btn btn-sm btn-primary">View Info</a>
+                {% endif %}
                 {% if meeting.signup_active %}
                   <!--<button class="btn btn-sm btn-secondary">Pigpen™ Quick Signup</button>-->
                   <button disabled class="btn btn-sm btn-secondary">Web Signup Coming Soon</button>
