--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -41,7 +41,13 @@
             <div class="col-12">
             <h4>Attendance</h4>
             <div class="pl-4">
-              <h6 class="text-muted">{{ meetings|length }}/{{ total_meetings }} Build Meetings (
+              <h6 class="text-muted">
+                {% if meetings|length <= total_meetings %}
+                  {{ meetings|length }}/{{ total_meetings }}
+                {% else %}
+                  {{ total_meetings }}/{{ total_meetings }}
+                {% endif %}
+                Build Meetings (
                 {% if attendance_percent >= 30 %}
                   <span class="text-success"><b>{{ attendance_percent }}%</b></span>
                 {% else %}
@@ -50,7 +56,14 @@
                 of hours )
               </h6>
               {% for meeting in meetings %}
-                <a href="{% url "teammanager:meeting" id=meeting.id %}">{{ meeting.date }}</a><br>
+                <a href="{% url "teammanager:meeting" id=meeting.id %}">
+                  <span>
+                    <b>{{ meeting.get_name }}</b> on {{ meeting.date }}
+                    {% if meeting.type == "othr" %}
+                      <small class="text-muted"><i>(optional)</i></small>
+                    {% endif %}
+                   </span>
+                </a><br>
               {% endfor %}
             </div>
             {% if member.slack or family|length > 1 %}
