better meetings page formatting

--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -6,7 +6,7 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-12 col-lg-4">
+      <div class="col-12 col-md-12 col-lg-5">
         <h5>OPEN Build Meetings</h5>
         <div class="list-group">
           {% for meeting in meetings %}
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-12 col-lg-6 offset-md-0 offset-lg-2">
+      <div class="col-12 col-md-12 offset-md-0 col-lg-6 offset-lg-1">
         <h5>Upcoming Outreaches</h5>
 
         <div class="list-group">
