--- a/teammanager/templates/teammanager/outreach_hours_add.html
+++ b/teammanager/templates/teammanager/outreach_hours_add.html
@@ -9,27 +9,22 @@
           <form action="{% url 'man:outreach_hours_add' %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-              <label for="eventName">Event Name</label>
-              <input class="form-control" type="text" name="event_name" id="eventName">
+              <label for="outreach-select">Select Outreach</label>
+              <select class="form-control" id="outreach-select" name="outreach-select">
+                {% for outreach in outreaches %}
+                  <option value="{{ outreach.id }}">{{ outreach.name }} on {{ outreach.date }}</option>
+                {% endfor %}
+              </select>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
               <label for="date">Date</label>
               <input class="form-control" type="date" name="date" id="date">
-            </div>
+            </div>-->
             <div class="form-group">
               <label for="numHrs"># Hours</label>
-              <input class="form-control" type="number" name="num_hrs" id="numHrs">
+              <input class="form-control" type="number" step="0.01" name="num_hrs" id="numHrs">
             </div>
-            <!--
-            <div class="form-group">
-                <label for="start">Start</label>
-                <input class="form-control" type="time" name="start" id="start">
-            </div>
-            <div class="form-group">
-                <label for="end">End</label>
-                <input class="form-control" type="time" name="end" id="end">
-            </div>
-            -->
+
             <h6>Members:</h6>
             {% for member in members %}
               <div class="form-check">
@@ -37,14 +32,9 @@
                        name="mbr-{{ member.id }}" id="chk-{{ member.id }}">
                 <label for="chk-{{ member.id }}">{{ member }}</label>
               </div>
-              <!--
-                            <div class="form-group form-inline">
-                                <label for="hrs-{{ member.id }}">{{ member }}</label>
-                                <input class="form-control ml-auto" type="number" name="hrs-{{ member.id }}"
-                                       id="hrs-{{ member.id }}">
-                            </div>
-                            -->
             {% endfor %}
+          <br>
+          <button class="btn btn-secondary">Submit</button>
           </form>
         </div>
       </div>
