--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -51,11 +51,18 @@
                 <p>No description provided.</p>
               {% endif %}
               {% if meeting.members.all|length > 0 %}
-                <a href="{% url "teammanager:meeting" id=meeting.id %}" class="btn btn-sm btn-primary">View Info</a>
+                <a href="{% url "teammanager:meeting" id=meeting.id %}" class="btn btn-sm btn-primary">View Signups</a>
               {% endif %}
               {% if meeting.signup_active %}
-                <!--<button class="btn btn-sm btn-secondary">Pigpen™ Quick Signup</button>-->
-                <button disabled class="btn btn-sm btn-secondary">Web Signup Coming Soon</button>
+                {% if member in meeting.members %}
+                  <button class="btn btn-sm btn-secondary">Unsign Up :(</button>
+                {% else %}
+                  {% if meeting.signup_notes_needed %}
+                    <button disabled class="btn btn-sm btn-secondary">Advanced Web Signup Coming Soon</button>
+                  {% else %}
+                    <button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#outreach-{{ meeting.id }}">Pigpen™ Quick Signup</button>
+                  {% endif %}
+                {% endif %}
               {% else %}
                 <a href="https://www.explodingbacon.com/forums/" class="btn btn-sm btn-primary">Visit Forum</a>
               {% endif %}
@@ -87,4 +94,28 @@
       </div>
     </div>
   </div>
+  {% for meeting in outreaches_upcoming %}
+    {% if meeting.signup_active %}
+      <div class="modal fade" id="outreach-{{ meeting.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+           aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title"><b>{{ meeting.get_name }}</b> on {{ meeting.date }}</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body text-center">
+              <b>Are you sure</b> you want to sign up for this outreach?
+            </div>
+            <div class="modal-footer text-center">
+              <button type="button" class="btn btn-secondary">Sign Up</button>
+              <button type="button" class="btn btn-light" data-dismiss="modal">Nevermind</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endif %}
+  {% endfor %}
 {% endblock %}
