--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -1,8 +1,21 @@
 {% extends 'teammanager/base.html' %}
 
+{% load static %}
+
 {% block title %}Meetings - Pigpen{% endblock %}
 
 {% block content %}
+  <script>
+    function signup(id) {
+        $.post('{% url 'man:meetings' %}',
+       {
+           signup: id
+       },
+       function(data, status, jqXHR) {
+            location.reload();
+        })
+    }
+  </script>
   <br>
   <div class="container">
     <div class="row">
@@ -36,7 +49,6 @@
 
       <div class="col-12 col-md-12 offset-md-0 col-lg-6 offset-lg-1">
         <h5>Upcoming Outreaches</h5>
-        ID: {{ request.session.slack_id }} = {{ request.session.member }}
         <div class="list-group">
           {% for meeting in outreaches_upcoming %}
             <div class="list-group-item">
@@ -54,14 +66,25 @@
                 <a href="{% url "teammanager:meeting" id=meeting.id %}" class="btn btn-sm btn-primary">View Signups</a>
               {% endif %}
               {% if meeting.signup_active %}
-                {% if member in meeting.members %}
-                  <button class="btn btn-sm btn-secondary">Unsign Up :(</button>
-                {% else %}
-                  {% if meeting.signup_notes_needed %}
-                    <button disabled class="btn btn-sm btn-secondary">Advanced Web Signup Coming Soon</button>
+                {% if member %}
+                  {% if member in meeting.members.all %}
+                    <button class="btn btn-sm btn-secondary">Unsign Up :(</button>
                   {% else %}
-                    <button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#outreach-{{ meeting.id }}">Pigpen™ Quick Signup</button>
-                  {% endif %}resp['access_token']
+                    {% if meeting.signup_notes_needed %}
+                      <button disabled class="btn btn-sm btn-secondary">Advanced Web Signup Coming Soon</button>
+                    {% else %}
+                      <button class="btn btn-sm btn-secondary" data-toggle="modal"
+                              data-target="#outreach-{{ meeting.id }}">Pigpen™ Quick Signup
+                      </button>
+                      <!--<button class="btn btn-sm btn-secondary" data-toggle="modal"
+                              data-target="#outreach-{{ meeting.id }}">
+                      <img src="{% static "teammanager/logo.png" %}" style="height: 15px; width: auto;">
+                        Quick Signup
+                      </button>-->
+                    {% endif %}
+                  {% endif %}
+                {% else %}
+                  <button disabled class="btn btn-sm btn-secondary">No Member Connected</button>
                 {% endif %}
               {% else %}
                 <a href="https://www.explodingbacon.com/forums/" class="btn btn-sm btn-primary">Visit Forum</a>
