--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -27,17 +27,17 @@
         </div>
         <hr>
         <div class="row">
-         {% if member.role == "stu" or member.role == "mtr" %}
-          <div class="col-12">
-            <h4>Hours: {{ hr_total }}</h4>
-            <div class="pl-4">
-              <h6><b>Build:</b> {{ hr_build }}</h6>
-              <h6><b>Outreach:</b> {{ hr_out }}</h6>
+          {% if member.role == "stu" or member.role == "mtr" %}
+            <div class="col-12">
+              <h4>Hours: {{ hr_total }}</h4>
+              <div class="pl-4">
+                <h6><b>Build:</b> {{ hr_build }}</h6>
+                <h6><b>Outreach:</b> {{ hr_out }}</h6>
+              </div>
+              <div class="">
+                <hr>
+              </div>
             </div>
-            <div class="">
-              <hr>
-            </div>
-          </div>
             <div class="col-12">
             <h4>Attendance</h4>
             <div class="pl-4">
@@ -66,11 +66,30 @@
                 </a><br>
               {% endfor %}
             </div>
-            {% if member.slack or family|length > 1 %}
+            {% if member.slack or family|length > 1 or outreaches|length > 0 %}
               <hr>
             {% endif %}
           {% endif %}
           </div>
+          {% if outreaches|length > 0 %}
+            <div class="col-12">
+            <h4>Outreaches</h4>
+            <div class="pl-4">
+              {% for outreach in outreaches %}
+                <a href="{% url "teammanager:meeting" id=outreach.0.id %}">
+                  <span>
+                    {{ outreach.0.date }} - <b>{{ outreach.0.get_name }}</b>
+                    {% if outreach.1 %}
+                      <small class="text-muted"><i>({{ outreach.1 }})</i></small>
+                    {% endif %}
+                   </span>
+                </a><br>
+              {% endfor %}
+            </div>
+            {% if member.slack or family|length > 1 %}
+              <hr>
+            {% endif %}
+          {% endif %}
           {% if member.slack %}
             <div class="col-12">
               <h4>Slack Info</h4>
