--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -42,12 +42,7 @@
             <h4>Attendance</h4>
             <div class="pl-4">
               <h6 class="text-muted">
-                {% if meetings|length <= total_meetings %}
-                  {{ meetings|length }}/{{ total_meetings }}
-                {% else %}
-                  {{ total_meetings }}/{{ total_meetings }}
-                {% endif %}
-                Build Meetings (
+                  {{ build_meetings|length }}/{{ total_meetings }} Build Meetings (
                 {% if attendance_percent >= 30 %}
                   <span class="text-success"><b>{{ attendance_percent }}%</b></span>
                 {% else %}
