--- a/teammanager/templates/teammanager/clusters.html
+++ b/teammanager/templates/teammanager/clusters.html
@@ -1,6 +1,6 @@
 {% extends 'teammanager/base.html' %}
 
-{% block title %}Clusters - Pigpen{% endblock %}
+{% block title %}Attendance Groups - Pigpen{% endblock %}
 
 {% block content %}
   <style>
@@ -26,6 +26,9 @@
 })
   </script>
   <div class="container">
+    <br>
+    <h2 class="text-center">Attendance Groupings</h2>
+    <hr>
     {% for group in groups %}
       <h2 class="mt-4 mb-4 text-center">{{ group.0 }}</h2>
       <div class="row justify-content-center mb-1">
