--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -82,8 +82,9 @@
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
              aria-expanded="false">Directory</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'man:directory' %}">Leaders</a>
-            <a class="dropdown-item" href="{% url 'man:families' %}">Families</a>
+            <a class="dropdown-item" href="{% url 'man:directory_all' %}">Everyone</a>
+            <a class="dropdown-item" href="{% url 'man:directory_leaders' %}">Leaders</a>
+            <a class="dropdown-item" href="{% url 'man:directory_families' %}">Families</a>
             {% if request.user.is_authenticated %}
               <a class="dropdown-item" href="{% url 'man:admin_add_photo' %}">Add Photos</a>
             {% endif %}
