--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -68,7 +68,7 @@
           </div>
           {% if outreaches|length > 0 %}
             <div class="col-12">
-            <h4>Outreaches</h4>
+            <h4>Outreach Events</h4>
             <div class="pl-4">
               {% for outreach in outreaches %}
                 <a href="{% url "teammanager:meeting" id=outreach.0.id %}">
