--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="col-12 col-md-12 offset-md-0 col-lg-6 offset-lg-1">
-        <h5>Upcoming Outreaches</h5>
+        <h5>Upcoming Outreach Events</h5>
         <div class="list-group">
           {% for meeting in outreaches_upcoming %}
             <div class="list-group-item">
@@ -102,7 +102,7 @@
         </div>
         <br>
         <h5>
-          Past Outreaches
+          Past Outreach Events
           {% if request.user.is_authenticated and request.user.is_staff %}
             <a href="{% url "man:outreach_hours_add" %}" class="btn btn-secondary btn-sm">Add Hours</a>
           {% endif %}
