Use more consistent naming across the project

--- a/teammanager/templates/teammanager/attendance_bands.html
+++ b/teammanager/templates/teammanager/attendance_bands.html
@@ -27,7 +27,7 @@
   </script>
   <div class="container">
     <br>
-    <h2 class="text-center">Attendance Groupings</h2>
+    <h2 class="text-center">Attendance Bands</h2>
     <hr>
     {% for group in groups %}
       <h2 class="mt-4 mb-4 text-center">{{ group.0 }}</h2>
