--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -64,7 +64,7 @@
              aria-expanded="false">Hours</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'man:hours' %}">All Hours</a>
-            <a class="dropdown-item" href="{% url 'man:hours_groups' %}">Categories</a>
+            <a class="dropdown-item" href="{% url 'man:hours_groups' %}">Percentage Bands</a>
           </div>
         </div>
         <div class="nav-item dropdown">
