Make tables responsive on mobile

--- a/teammanager/templates/teammanager/meeting_verification.html
+++ b/teammanager/templates/teammanager/meeting_verification.html
@@ -11,7 +11,7 @@
 
 {% block content %}
   <div class="container-fluid">
-    <table class="table table-hover table-striped">
+    <table class="table table-hover table-striped table-responsive-sm">
       <thead>
       <tr>
         <th>Title</th>
