--- a/teammanager/templates/teammanager/outreach_from_calendar.html
+++ b/teammanager/templates/teammanager/outreach_from_calendar.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="container-fluid">
     <h2 class="text-center my-3">Create Outreach Event from Calendar</h2>
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover table-responsive-sm">
       <thead>
       <tr>
         <th>Name</th>
