--- a/teammanager/templates/teammanager/directory_all.html
+++ b/teammanager/templates/teammanager/directory_all.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="container-fluid">
-    <h3 class="text-center">Students</h3>
+    <h2 class="mt-4 mb-4 text-center">Students</h2>
     <div class="row justify-content-center">
       {% for member in students %}
         <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
@@ -18,7 +18,8 @@
 
       {% endfor %}
     </div>
-    <h3 class="text-center">Adults</h3>
+    <hr>
+    <h2 class="mt-4 mb-4 text-center">Adults</h2>
     <div class="row justify-content-center">
       {% for member in adults %}
         <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
