--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -24,6 +24,9 @@
           {% else %}
             <h5 class="text-muted">{{ member.get_role_display }}</h5>
           {% endif %}
+          {% if request.user.is_staff %}
+            <a class="btn btn-secondary" href="{% url 'admin:teammanager_member_change' member.id %}">Edit</a>
+          {% endif %}
         </div>
         <hr>
         <div class="row">
